[project]
name = "support-triage-nlp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "transformers>=4.43",
  "torch>=2.3; platform_system!='Darwin' or platform_machine!='arm64'",
  "torch>=2.3; platform_system=='Darwin' and platform_machine=='arm64'",  # Apple Silicon wheels
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "gradio>=4.41",
  "streamlit>=1.37",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest","ruff","black","pytest-cov"]
